--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  
+  "homepage": "https://Rahul7315.github.io/portfolio",
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
